# gow-rust

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.bat  download-extras.ps1  setup.bat
.cargo/: config.toml
.github/workflows/: auto-release.yml  ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/_archive/03-filesystem-original/: 03-01-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-08-PLAN.md  03-RESEARCH.md  03-VALIDATION.md  deferred-items.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-stateless/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-08-PLAN.md  02-08-SUMMARY.md  02-09-PLAN.md  02-09-SUMMARY.md  02-10-PLAN.md  02-10-SUMMARY.md  02-11-PLAN.md  02-11-SUMMARY.md  02-CONTEXT.md  02-PATTERNS.md  02-RESEARCH.md  02-VALIDATION.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/gow-awk/: Cargo.toml
crates/gow-awk/src/: lib.rs  main.rs
crates/gow-awk/tests/: integration.rs
crates/gow-basename/: Cargo.toml  build.rs
crates/gow-basename/src/: lib.rs  main.rs
crates/gow-basename/tests/: integration.rs
crates/gow-bzip2/: Cargo.toml
crates/gow-bzip2/src/: lib.rs  main.rs
crates/gow-bzip2/tests/: bzip2_tests.rs
crates/gow-cat/: Cargo.toml
crates/gow-cat/src/: lib.rs  main.rs
crates/gow-cat/tests/: integration.rs
crates/gow-chmod/: Cargo.toml
crates/gow-chmod/src/: lib.rs  main.rs
crates/gow-chmod/tests/: integration.rs
crates/gow-core/: Cargo.toml  build.rs
crates/gow-core/src/: args.rs  color.rs  encoding.rs  error.rs  fs.rs  lib.rs  path.rs
crates/gow-cp/: Cargo.toml
crates/gow-cp/src/: lib.rs  main.rs
crates/gow-cp/tests/: cp_tests.rs
crates/gow-curl/: Cargo.toml
crates/gow-curl/src/: lib.rs  main.rs
crates/gow-curl/tests/: curl_tests.rs
crates/gow-cut/: Cargo.toml
crates/gow-cut/src/: lib.rs  main.rs
crates/gow-cut/tests/: integration.rs
crates/gow-df/: Cargo.toml
crates/gow-df/src/: lib.rs  main.rs
crates/gow-df/tests/: integration.rs
crates/gow-diff/: Cargo.toml
crates/gow-dirname/: Cargo.toml  build.rs
crates/gow-dos2unix/: Cargo.toml
crates/gow-dos2unix/src/: lib.rs  main.rs  transform.rs
crates/gow-dos2unix/tests/: integration.rs
crates/gow-du/: Cargo.toml
crates/gow-echo/: Cargo.toml  build.rs
crates/gow-echo/src/: escape.rs  lib.rs  main.rs
crates/gow-echo/tests/: integration.rs
crates/gow-env/: Cargo.toml  build.rs
crates/gow-env/src/: lib.rs  main.rs  split.rs
crates/gow-env/tests/: integration.rs
crates/gow-expand-unexpand/: Cargo.toml
crates/gow-expand-unexpand/src/: lib.rs  unexpand.rs
crates/gow-expand-unexpand/tests/: integration.rs
crates/gow-expr/: Cargo.toml
crates/gow-expr/src/: lib.rs  main.rs
crates/gow-expr/tests/: integration.rs
crates/gow-false/: Cargo.toml  build.rs
crates/gow-false/src/: lib.rs  main.rs
crates/gow-false/tests/: integration.rs
crates/gow-find/: Cargo.toml
crates/gow-fmt/: Cargo.toml
crates/gow-fold/: Cargo.toml
crates/gow-grep/: Cargo.toml
crates/gow-grep/src/: lib.rs  main.rs
crates/gow-grep/tests/: integration.rs
crates/gow-gzip/: Cargo.toml
crates/gow-gzip/src/: lib.rs  main.rs
crates/gow-gzip/tests/: gzip_tests.rs
crates/gow-hashsum/: Cargo.toml  build.rs
crates/gow-hashsum/src/: lib.rs  md5sum.rs
crates/gow-hashsum/tests/: integration.rs
crates/gow-head/: Cargo.toml
crates/gow-join/: Cargo.toml
crates/gow-less/: Cargo.toml
crates/gow-less/src/: lib.rs  line_index.rs  main.rs
crates/gow-less/tests/: less_tests.rs
crates/gow-ln/: Cargo.toml
crates/gow-ln/src/: lib.rs  main.rs
crates/gow-ln/tests/: ln_tests.rs
crates/gow-ls/: Cargo.toml  build.rs
crates/gow-ls/src/: format.rs  layout.rs  lib.rs  main.rs  recurse.rs
crates/gow-ls/tests/: integration.rs
crates/gow-mkdir/: Cargo.toml  build.rs
crates/gow-mkdir/src/: lib.rs  main.rs
crates/gow-mkdir/tests/: integration.rs
crates/gow-mv/: Cargo.toml
crates/gow-mv/src/: lib.rs  main.rs
crates/gow-mv/tests/: mv_tests.rs
crates/gow-nl/: Cargo.toml
crates/gow-nl/src/: lib.rs  main.rs
crates/gow-nl/tests/: integration.rs
crates/gow-od/: Cargo.toml
crates/gow-od/src/: lib.rs  main.rs
crates/gow-od/tests/: integration.rs
crates/gow-paste/: Cargo.toml
crates/gow-patch/: Cargo.toml
crates/gow-patch/src/: lib.rs  main.rs
crates/gow-patch/tests/: integration.rs
crates/gow-printf/: Cargo.toml
crates/gow-printf/src/: lib.rs  main.rs
crates/gow-printf/tests/: integration.rs
crates/gow-probe/: Cargo.toml  build.rs
crates/gow-probe/src/: main.rs
crates/gow-probe/tests/: integration.rs
crates/gow-pwd/: Cargo.toml  build.rs
crates/gow-rm/: Cargo.toml
crates/gow-rmdir/: Cargo.toml  build.rs
crates/gow-sed/: Cargo.toml
crates/gow-seq/: Cargo.toml
crates/gow-sleep/: Cargo.toml
crates/gow-sort/: Cargo.toml
crates/gow-split/: Cargo.toml
crates/gow-tac/: Cargo.toml
crates/gow-tail/: Cargo.toml
crates/gow-tar/: Cargo.toml
crates/gow-tee/: Cargo.toml  build.rs
crates/gow-test/: Cargo.toml
crates/gow-touch/: Cargo.toml
crates/gow-tr/: Cargo.toml
crates/gow-true/: Cargo.toml  build.rs
crates/gow-uname/: Cargo.toml
crates/gow-uniq/: Cargo.toml
crates/gow-unix2dos/: Cargo.toml
crates/gow-unlink/: Cargo.toml
crates/gow-wc/: Cargo.toml  build.rs
crates/gow-which/: Cargo.toml  build.rs
crates/gow-whoami/: Cargo.toml
crates/gow-xargs/: Cargo.toml
crates/gow-xz/: Cargo.toml
crates/gow-yes/: Cargo.toml  build.rs
wix/: BinHarvest-x64.wxs  BinHarvest-x86.wxs  License.rtf  fix-guids.ps1  main.wxs
(+277 files in other folders)
