[workspace]
members = [
    "crates/gow-core",
    "crates/gow-probe",
    # Phase 2 — stateless utilities (D-16)
    "crates/gow-echo",
    "crates/gow-pwd",
    "crates/gow-env",
    "crates/gow-tee",
    "crates/gow-basename",
    "crates/gow-dirname",
    "crates/gow-yes",
    "crates/gow-true",
    "crates/gow-false",
    "crates/gow-mkdir",
    "crates/gow-rmdir",
    "crates/gow-touch",
    "crates/gow-wc",
    "crates/gow-which",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["gow-rust contributors"]

[workspace.dependencies]
# Argument parsing
clap = { version = "4.6", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Terminal output
termcolor = "1"

# Windows platform APIs
windows-sys = { version = "0.61", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

# Encoding
encoding_rs = "0.8"

# Path utilities
path-slash = "0.2"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Phase 2 additions (D-20a)
snapbox = "1.2"                      # snapshot testing (D-30a)
bstr = "1"                           # byte-safe iteration for wc (D-17)
filetime = "0.2"                     # file timestamps for touch (Q2)

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
