[workspace]
members = [
    "crates/gow-core",
    "crates/gow-probe",
    # Phase 2 — stateless utilities (D-16)
    "crates/gow-echo",
    "crates/gow-pwd",
    "crates/gow-env",
    "crates/gow-tee",
    "crates/gow-basename",
    "crates/gow-dirname",
    "crates/gow-yes",
    "crates/gow-true",
    "crates/gow-false",
    "crates/gow-mkdir",
    "crates/gow-rmdir",
    "crates/gow-touch",
    "crates/gow-wc",
    "crates/gow-which",
    # Phase 3 — filesystem utilities (D-49)
    "crates/gow-cat",
    "crates/gow-ls",
    "crates/gow-cp",
    "crates/gow-mv",
    "crates/gow-rm",
    "crates/gow-ln",
    "crates/gow-chmod",
    "crates/gow-head",
    "crates/gow-tail",
    "crates/gow-dos2unix",
    "crates/gow-unix2dos",
    # Phase 4 — text processing (S04)
    "crates/gow-grep",
    "crates/gow-sed",
    "crates/gow-sort",
    "crates/gow-uniq",
    "crates/gow-tr",
    "crates/gow-cut",
    "crates/gow-diff",
    "crates/gow-patch",
    "crates/gow-awk",
    # Phase 5 — search and navigation (S05)
    "crates/gow-find",
    "crates/gow-xargs",
    "crates/gow-less",
    # Phase 6 — archive, compression, and network (S06)
    "crates/gow-gzip",
    "crates/gow-bzip2",
    "crates/gow-xz",
    "crates/gow-tar",
    "crates/gow-curl",
    # Phase 10 — new utilities wave 1 (U-01 through U-10)
    "crates/gow-seq",
    "crates/gow-sleep",
    "crates/gow-tac",
    "crates/gow-nl",
    "crates/gow-od",
    "crates/gow-fold",
    "crates/gow-expand-unexpand",
    "crates/gow-du",
    "crates/gow-df",
    "crates/gow-hashsum",
    # Phase 11 — new utilities wave 2 (U2-01 through U2-10)
    "crates/gow-whoami",
    "crates/gow-uname",
    "crates/gow-paste",
    "crates/gow-join",
    "crates/gow-split",
    "crates/gow-printf",
    "crates/gow-expr",
    "crates/gow-test",
    "crates/gow-fmt",
    "crates/gow-unlink",
]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["gow-rust contributors"]

[workspace.dependencies]
# Argument parsing
clap = { version = "4.6", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Terminal output
termcolor = "1"

# Windows platform APIs
windows-sys = { version = "0.61", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",    # Phase 11: GetUserNameW (whoami) + GetComputerNameW (uname)
    "Win32_System_SystemInformation",     # Phase 11: OSVERSIONINFOW/GetNativeSystemInfo (uname)
    "Wdk_System_SystemServices",          # Phase 11: RtlGetVersion (uname)
] }

# Encoding
encoding_rs = "0.8"

# Path utilities
path-slash = "0.2"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Phase 2 additions (D-20a)
snapbox = "1.2"                      # snapshot testing (D-30a)
bstr = "1"                           # byte-safe iteration for wc (D-17)
filetime = "0.2"                     # file timestamps for touch (Q2)
regex = "1"                          # pattern matching (grep, sed, awk)

# Phase 3 additions (D-50 + junction gap from research)
walkdir = "2.5"                      # recursive traversal (cp, rm, ls, chmod -R)
notify = "8.2"                       # tail -f watcher — gow-tail only
terminal_size = "0.4"                # ls column layout — gow-ls only
junction = "1.4"                     # D-36 directory-symlink fallback — gow-core + gow-ln

# Phase 4 additions (S04 diff/patch)
similar = "2.6"                      # diff algorithms (Myers, Patience) — gow-diff
diffy = "0.4"                        # unified diff apply — gow-patch

# Phase 5 additions (S05 search and navigation)
crossterm = "0.29"                   # terminal pager raw mode — gow-less only
globset = "0.4"                      # compiled glob matching — gow-find only

# Phase 6 additions (S06 archive, compression, and network)
flate2 = "1.1"                       # gzip/deflate (miniz_oxide pure-Rust backend) — gow-gzip, gow-tar
bzip2 = "0.6"                        # bzip2 (libbz2-rs-sys pure-Rust backend) — gow-bzip2, gow-tar
liblzma = { version = "0.4", features = ["static"] }  # xz/lzma (MSVC-safe fork of xz2) — gow-xz
tar = "0.4"                          # tar archive create/extract — gow-tar
reqwest = { version = "0.13", features = ["blocking", "native-tls"], default-features = false }
                                     # HTTP client (Windows SChannel TLS) — gow-curl only

# Phase 10 additions (U-10 hash utilities)
md-5 = "0.11"                        # MD5 hash function — gow-hashsum only
sha1 = "0.11"                        # SHA-1 hash function — gow-hashsum only
sha2 = "0.11"                        # SHA-256 — gow-hashsum only
digest = "0.11"                      # Hash trait — gow-hashsum only
hex = "0.4"                          # Digest hex encoding — gow-hashsum only

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
