[package]
name = "gow-dos2unix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Convert CRLF to LF in-place with atomic rewrite (CONV-01)."

[[bin]]
name = "dos2unix"
path = "src/main.rs"

[lib]
name = "uu_dos2unix"
path = "src/lib.rs"

[dependencies]
gow-core = { path = "../gow-core" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bstr = { workspace = true }
filetime = { workspace = true }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
