[package]
name = "gow-expand-unexpand"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GNU expand/unexpand — Windows port."

[[bin]]
name = "expand"
path = "src/expand.rs"

[[bin]]
name = "unexpand"
path = "src/unexpand.rs"

[lib]
name = "uu_expand_unexpand"
path = "src/lib.rs"

[dependencies]
gow-core = { path = "../gow-core" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bstr = { workspace = true }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
