[package]
name = "gow-hashsum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GNU md5sum/sha1sum/sha256sum — Windows port."

[[bin]]
name = "md5sum"
path = "src/md5sum.rs"

[[bin]]
name = "sha1sum"
path = "src/sha1sum.rs"

[[bin]]
name = "sha256sum"
path = "src/sha256sum.rs"

[lib]
name = "uu_hashsum"
path = "src/lib.rs"

[dependencies]
gow-core = { path = "../gow-core" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
