[package]
name = "gow-less"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GNU less — Windows port."

[[bin]]
name = "less"
path = "src/main.rs"

[lib]
name = "uu_less"
path = "src/lib.rs"

[dependencies]
gow-core = { path = "../gow-core" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
crossterm = { workspace = true }
terminal_size = { workspace = true }
bstr = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
