[package]
name = "gow-ln"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GNU ln — create hard and symbolic links with D-36 junction fallback (FILE-09)."

[[bin]]
name = "ln"
path = "src/main.rs"

[lib]
name = "uu_ln"
path = "src/lib.rs"

[dependencies]
gow-core = { path = "../gow-core" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
junction = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }
