[package]
name = "gow-ls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GNU ls — list directory contents with hidden/colorized/symlink-aware output (FILE-02)."

[[bin]]
name = "ls"
path = "src/main.rs"

[lib]
name = "uu_ls"
path = "src/lib.rs"

[dependencies]
gow-core = { path = "../gow-core" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
terminal_size = { workspace = true }
termcolor = { workspace = true }
bstr = { workspace = true }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
