[package]
name = "gow-mkdir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GNU mkdir — UTF-8 safe Windows port."

[[bin]]
name = "mkdir"
path = "src/main.rs"

[lib]
name = "uu_mkdir"
path = "src/lib.rs"

[dependencies]
gow-core = { path = "../gow-core" }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
